Fix event card spacing issues on mobile and medium screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -242,6 +242,7 @@ body {
     height: 100%;
     display: flex;
     flex-direction: column;
+    width: 100%;
     max-width: 240px; /* Сужаем ширину карточки под вертикальные изображения */
     margin: 0 auto;
 }
@@ -660,7 +661,17 @@ body {
 
 @media (max-width: 992px) {
     .event-card {
-        max-width: 220px;
+        max-width: 100%;
+    }
+    
+    .event-row {
+        margin-left: -4px;
+        margin-right: -4px;
+    }
+    
+    .event-row > .col,
+    .event-row > [class*="col-"] {
+        padding: 4px;
     }
 }
 
@@ -682,17 +693,13 @@ body {
     }
     
     .event-row {
-        margin-left: -5px;
-        margin-right: -5px;
+        margin-left: -3px;
+        margin-right: -3px;
     }
     
     .event-row > .col,
     .event-row > [class*="col-"] {
-        padding: 5px;
-    }
-    
-    .event-card {
-        max-width: 100%;
+        padding: 3px;
     }
 }
 
@@ -719,13 +726,24 @@ body {
     }
     
     .event-row {
-        margin-left: -4px;
-        margin-right: -4px;
+        margin-left: -2px;
+        margin-right: -2px;
     }
     
     .event-row > .col,
     .event-row > [class*="col-"] {
-        padding: 4px;
+        padding: 2px;
+    }
+    
+    .event-card {
+        margin: 0;
+        width: 100%;
+        max-width: none;
+    }
+    
+    .container {
+        padding-left: 5px;
+        padding-right: 5px;
     }
 }
 
